--- a/05.Loops/Test01.html
+++ b/05.Loops/Test01.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Document</title>
+    <title>For loop</title>
     <script>
-        for(let i=1;i<=3;i++){
+        for(let i=1;i<=5;i++){
             console.log(i);
         }
     </script>
@@ -11,4 +11,5 @@
 <body>
     <h1>Loops</h1>
 </body>
+
 </html>
