--- a/06.Array Declaration/ArrayLiteral.html
+++ b/06.Array Declaration/ArrayLiteral.html
@@ -1,1 +1,65 @@
-a
+<!DOCTYPE html>
+<html>
+<body>
+
+    <h1>Check the console for the message!</h1>
+
+    <script>
+       // ! Array : used to store multiple value
+
+
+
+// ! 2 ways -- declaration
+
+//? 1.Array literals
+
+//? syntax : var/let/const arrayname = [valu1,valu2,valu3,value4,....]
+
+
+
+const arr = [1,2,3,4,5,6,7,8,9,10]
+
+console.log(arr);
+
+
+
+let std = [123,'manu',true,789.98]
+
+console.log(std);
+
+
+
+
+
+// ! access
+
+console.log(arr[2]);
+
+console.log(arr[4]);
+
+
+
+// ! update
+
+arr[1] = 200
+
+
+
+// ! add
+
+arr[10] = 2000
+
+
+
+// ! delete
+
+delete arr[4]
+
+console.log(arr);
+
+
+
+    </script>
+
+</body>
+</html>
