--- a/06.Array Declaration/ArrayConstrctor.html
+++ b/06.Array Declaration/ArrayConstrctor.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+    <h1>Check the console for output</h1>
+    <script>
+      //? 2.Array constructor
+// let nums = new Array(786,35,3,5,2,4,6,87)
+let nums = new Array(3)
+nums[0] = 20
+nums[1] = 50
+nums[2] = 89
+nums[3] = 90
+console.log(nums);
+    </script>
+</body>
+</html>
